--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,83 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #7fffd4;
+  margin-bottom: 100px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.header-container {
+  padding: 0px;
+}
+
+.nominations-container {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 15pt;
+  background-color: white;
+  padding: 10px;
+  border: 10px solid #EDB2D6;
+
+}
+
+.results-container {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 15pt;
+  background-color: white;
+  padding: 10px;
+  border: 10px solid #EDB2D6;
+}
+
+.search-container {
+  justify-content: center;
+  margin: 0 auto;
+  padding: 10px;
+  margin: 0 auto;
+  margin-top: 10px;
+}
+
+.banner-container {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 20pt;
+  background-color: white;
+  padding: 5px;
+  border: 10px dotted #EDB2D6;
+  width: 50%;
+  margin: 0 auto;
+  margin-top: 25px;;
+  margin-bottom: 25px;
+  justify-content: center;
+}
+
+.body-container {
+  margin: 0 auto;
+  margin-top: 10px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
+}
+
+.header-pic {
+  width: 100%;
+}
+
+.search-pic {
+  display: block;
+  height: 200px;
+}
+
+.search-form {
+  width: 60%;
+  height: 40px;
+  margin: 0 auto;
+  margin-top: 10px;
+  margin-left: 250px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 5px;
+}
+
+input, select, textarea {
+  font-size: 150%;
+  }
+
+.search-button {
+  font-size: 13pt;
+  width: 100px;
 }
