--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  margin: 0 auto;
   background-color: #7fffd4;
   margin-bottom: 100px;
 }
@@ -55,6 +56,10 @@ body {
 
 .header-pic {
   width: 100%;
+}
+
+.footer-pic {
+  
 }
 
 .search-pic {
