--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
 
 .header-container {
   padding: 0px;
+  margin-bottom: 0px;
 }
 
 .nominations-container {
@@ -14,7 +15,11 @@ body {
   background-color: white;
   padding: 10px;
   border: 10px solid #EDB2D6;
-
+  margin: 0 auto;
+  margin-top: 10px;
+  display: grid;
+  /* grid-template-columns: 50%; */
+  grid-gap: 10px;
 }
 
 .results-container {
@@ -23,10 +28,14 @@ body {
   background-color: white;
   padding: 10px;
   border: 10px solid #EDB2D6;
+  margin: 0 auto;
+  margin-top: 10px;
+  display: grid;
+  /* grid-template-columns: 50%; */
+  grid-gap: 10px;
 }
 
 .search-container {
-  justify-content: center;
   margin: 0 auto;
   padding: 10px;
   margin: 0 auto;
@@ -46,6 +55,14 @@ body {
   justify-content: center;
 }
 
+.footer-container {
+  margin: 0 auto;
+  margin-top: 10px;
+  display: grid;
+  grid-template-columns: 30% 30%;
+  grid-gap: 10px;
+}
+
 .body-container {
   margin: 0 auto;
   margin-top: 10px;
@@ -55,17 +72,16 @@ body {
 }
 
 .header-pic {
-  /* width: 100%; */
+  width: 100%;
 }
 
 .footer-pic {
-  width: 50%;
 
 }
 
 .search-pic {
   display: block;
-  height: 200px;
+  height: 180px;
 }
 
 .search-form {
